<resources>
    <string name="app_name">Implicit_Intents</string>
    <string name="timer_txt">Timer</string>
    <string name="alarm_txt">Alarm</string>
    <string name="calendar_txt">Calendar</string>
    <string name="camera_txt">camera/gallery</string>
    <string name="video_camera_txt">video camera</string>
    <string name="contact_txt">contact</string>
    <string name="email_txt">email</string>
    <string name="file_txt">Pick Image</string>
    <string name="maps_txt">maps</string>
    <string name="phone_txt">phone</string>
    <string name="share_txt">Share</string>
    <string name="share_hint_txt">Enter Text</string>
    <string name="share_text_txt">Share Text</string>
    <string name="share_email_txt">Share Email</string>
    <string name="share_file_txt">Share File</string>
    <string name="take_photo_txt">Take Photo</string>
    <string name="title_txt">Implicit Intents</string>
    <string name="search_text_txt">search</string>
</resources>
