<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="projects.nyinyihtunlwin.implicit_intents.ShareActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tip_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/share_hint_txt" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_share_text"
        style="@style/MyBtn"
        android:text="@string/share_text_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_text" />

    <Button
        android:id="@+id/btn_share_email"
        style="@style/MyBtn"
        android:text="@string/share_email_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_share_text" />

    <Button
        android:id="@+id/btn_share_file"
        style="@style/MyBtn"
        android:text="@string/share_file_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_share_email" />
</android.support.constraint.ConstraintLayout>
